Fix container grid overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 html {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 body {
@@ -19,23 +19,26 @@ code {
 
 #root {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .container {
+  flex: 1;
   padding: 0;
   max-width: 100%;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
     'side graph graph graph graph graph'
     'side graph graph graph graph graph'
     'side graph graph graph graph graph'
-    'side navigator navigator navigator navigator navigator'
     'side navigator navigator navigator navigator navigator';
 }
 
